{
  "version": 4,
  "terraform_version": "0.14.3",
  "serial": 22,
  "lineage": "f79dbb9e-27ef-bde8-eb59-0007e6df115a",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "milk_bastion_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:936777008077:security-group/sg-0aec54974cb6df3e2",
            "description": "Security group for bastion instance",
            "filter": null,
            "id": "sg-0aec54974cb6df3e2",
            "name": "milk_bastion_security_group",
            "tags": {
              "Name": "milk_bastion_security_group"
            },
            "vpc_id": "vpc-04c5c8034d32b525a"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "milk_default_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:936777008077:security-group/sg-07173eacf097938e5",
            "description": "default VPC security group",
            "filter": null,
            "id": "sg-07173eacf097938e5",
            "name": "default",
            "tags": {
              "Name": "milk-default-securitygroup"
            },
            "vpc_id": "vpc-04c5c8034d32b525a"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "milk_public_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:936777008077:subnet/subnet-07dfd2f27f167a40c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.1.0/24",
            "default_for_az": false,
            "id": "subnet-07dfd2f27f167a40c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "936777008077",
            "state": "available",
            "tags": {
              "Name": "milk-public-az-1",
              "kubernetes.io/cluster/lunar-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-04c5c8034d32b525a"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "milk_public_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:936777008077:subnet/subnet-0e0aceff2165ba565",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.2.0/24",
            "default_for_az": false,
            "id": "subnet-0e0aceff2165ba565",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "936777008077",
            "state": "available",
            "tags": {
              "Name": "milk-public-az-2",
              "kubernetes.io/cluster/lunar-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-04c5c8034d32b525a"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "eks_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:936777008077:vpc/vpc-04c5c8034d32b525a",
            "cidr_block": "10.10.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-03e6acc8c45ec57b3",
                "cidr_block": "10.10.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-1d9b5667",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-04c5c8034d32b525a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-02463409932863138",
            "owner_id": "936777008077",
            "state": "available",
            "tags": {
              "Name": "eks-terraform-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:936777008077:security-group/sg-0cc8bf6b2b77999f1",
            "description": "EKS cluster security group.",
            "egress": [],
            "id": "sg-0cc8bf6b2b77999f1",
            "ingress": [],
            "name": "seoul-eks-cluster220210429064744491500000002",
            "name_prefix": "seoul-eks-cluster2",
            "owner_id": "936777008077",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "seoul-eks-cluster2-eks_cluster_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04c5c8034d32b525a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.eks_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:936777008077:security-group/sg-0b4c77f5528f22465",
            "description": "Security group for all nodes in the cluster.",
            "egress": [],
            "id": "sg-0b4c77f5528f22465",
            "ingress": [],
            "name": "seoul-eks-cluster220210429064744491100000001",
            "name_prefix": "seoul-eks-cluster2",
            "owner_id": "936777008077",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "seoul-eks-cluster2-eks_worker_sg",
              "kubernetes.io/cluster/seoul-eks-cluster2": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-04c5c8034d32b525a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.eks_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-2221037943",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0cc8bf6b2b77999f1",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.eks_vpc",
            "module.eks.aws_security_group.cluster"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-3865649578",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0cc8bf6b2b77999f1",
            "self": false,
            "source_security_group_id": "sg-0b4c77f5528f22465",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.eks_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-4169561021",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0b4c77f5528f22465",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.eks_vpc",
            "module.eks.aws_security_group.workers"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-761198851",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b4c77f5528f22465",
            "self": false,
            "source_security_group_id": "sg-0cc8bf6b2b77999f1",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.eks_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-3947897382",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b4c77f5528f22465",
            "self": false,
            "source_security_group_id": "sg-0cc8bf6b2b77999f1",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.eks_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-1067559088",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0b4c77f5528f22465",
            "self": false,
            "source_security_group_id": "sg-0b4c77f5528f22465",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.eks_vpc",
            "module.eks.aws_security_group.workers"
          ]
        }
      ]
    }
  ]
}